# Image-Viewer

./: .gitignore  pnpm-lock.yaml
src/: App.tsx  theme.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: DuplicateView.tsx  FilterBar.tsx  ImageCard.tsx
