[package]
name = "image-viewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "image_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
rayon = "1"
sha2 = { version = "0.10" }
hex = "0.4"
kamadak-exif = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
